<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailedRocketFragment">

    <TextView
        android:id="@+id/text_view_detailed_rocket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rocket_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_rocket"
        app:layout_constraintVertical_bias="0.244" />

    <Button
        android:id="@+id/button_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_button_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_detailed_rocket" />

    <ImageView
        android:id="@+id/image_view_rocket"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/rocket"
        android:src="@mipmap/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>
